<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <androidx.cardview.widget.CardView
        android:id="@+id/id_popup_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/id_confirm_add_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_new_item"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/id_confirm_add_item_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/id_edittext_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/item_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/id_confirm_add_item_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleItem"
                android:autofillHints="no" />

            <EditText
                android:id="@+id/id_edittext_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/quantity"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toStartOf="@+id/id_confirm_add_item_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_edittext_item_name"
                android:autofillHints="no" />

            <AutoCompleteTextView
                android:id="@+id/id_edittext_item_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_type"
                app:layout_constraintEnd_toEndOf="@+id/id_edittext_item_quantity"
                app:layout_constraintStart_toStartOf="@+id/id_edittext_item_quantity"
                app:layout_constraintTop_toBottomOf="@+id/id_edittext_item_quantity" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>