...
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/id_request_refuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_request_accept"
                app:srcCompat="@drawable/ic_clear"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/id_request_organiser"
                android:layout_width="wrap_content"
...
