...
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.MapsFragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/id_locate_me_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_location_button"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/margin_right_map_btn"
        android:layout_marginBottom="@dimen/margin_bottom_map_btn"
        android:clickable="true"
        android:contentDescription="@string/none"
...
