<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <FrameLayout
        android:id="@+id/fl_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navigation_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/navigation_bar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:itemIconTint="@color/on_primary"
        app:itemTextColor="@color/on_primary"
        app:menu="@menu/nav_menu2" />
</RelativeLayout>