...
            android:orientation="horizontal"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_row="1">

            <Button
                android:id="@+id/btnRedirectZoneManagement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:drawableTop="@drawable/ic_place"
                android:drawableTint="@color/purple_500"
                android:text="@string/admin_hub_btn_zone_text"
...
